--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,26 @@
-body{ padding-top:90px; }
-#page-index #functions .hero-unit{ padding:18px; }
-#page-index #functions .hero-unit h3 {margin-bottom:18px;}
-#page-index #functions .hero-unit p {min-height:5em;font-size:13px;color:#666;}
-.footer { margin-top:45px;padding-top:18px;border-top:1px dotted #ccc; }
+body{ padding-top:90px;}
+.footer { margin-top:36px;padding-top:18px;border-top:1px dotted #ccc; }
+.box{
+	background-color: #fbfbfb;
+	background-image: -moz-linear-gradient(top, #ffffff, #f5f5f5);
+	background-image: -ms-linear-gradient(top, #ffffff, #f5f5f5);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f5f5f5));
+	background-image: -webkit-linear-gradient(top, #ffffff, #f5f5f5);
+	background-image: -o-linear-gradient(top, #ffffff, #f5f5f5);
+	background-image: linear-gradient(top, #ffffff, #f5f5f5);
+	background-repeat: repeat-x;
+	border: 1px solid #ddd;
+	-webkit-border-radius: 3px;
+	   -moz-border-radius: 3px;
+	        border-radius: 3px;
+	filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffffff', endColorstr='#f5f5f5', GradientType=0);
+	-webkit-box-shadow: inset 0 1px 0 #ffffff;
+	   -moz-box-shadow: inset 0 1px 0 #ffffff;
+	        box-shadow: inset 0 1px 0 #ffffff;
+}
+
+#main{min-height:360px;}
+#page-home .box{border: none;background: none;}
+#page-home #functions .span4{ padding:18px 0; }
+#page-home #functions .span4 h3 {margin-bottom:18px;}
+#page-home #functions .span4 p {padding: 3em 1em;font-size:13px;color:#666;}
