--- a/css/global.css
+++ b/css/global.css
@@ -1,23 +1,14 @@
+@import url("./bootstrap.css");
 body{ padding-top:90px;}
 .footer { margin-top:36px;padding-top:18px;border-top:1px dotted #ccc; }
 .box{
 	background-color: #fbfbfb;
-	background-image: -moz-linear-gradient(top, #ffffff, #f5f5f5);
-	background-image: -ms-linear-gradient(top, #ffffff, #f5f5f5);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f5f5f5));
-	background-image: -webkit-linear-gradient(top, #ffffff, #f5f5f5);
-	background-image: -o-linear-gradient(top, #ffffff, #f5f5f5);
-	background-image: linear-gradient(top, #ffffff, #f5f5f5);
-	background-repeat: repeat-x;
 	border: 1px solid #ddd;
 	-webkit-border-radius: 3px;
 	   -moz-border-radius: 3px;
 	        border-radius: 3px;
-	filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffffff', endColorstr='#f5f5f5', GradientType=0);
-	-webkit-box-shadow: inset 0 1px 0 #ffffff;
-	   -moz-box-shadow: inset 0 1px 0 #ffffff;
-	        box-shadow: inset 0 1px 0 #ffffff;
 }
+.well{-webkit-box-shadow: none;-moz-box-shadow: none;box-shadow: none;}
 
 #main{min-height:360px;}
 #page-home .box{border: none;background: none;}
