--- a/css/global.css
+++ b/css/global.css
@@ -10,7 +10,8 @@ body{ padding-top:90px;}
 }
 .well{-webkit-box-shadow: none;-moz-box-shadow: none;box-shadow: none;}
 
-#main{min-height:360px;}
+#main .items .item { padding:18px;border-bottom:1px solid #ccc;margin-bottom:-1px; }
+
 #page-home .box{border: none;background: none;}
 #page-home #functions .span4{ padding:18px 0; }
 #page-home #functions .span4 h3 {margin-bottom:18px;}
