--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,5 @@
 @import url("./bootstrap.css");
-body{ padding-top:90px;}
+body{ font-size:18px;font-family:consolas;padding-top:90px }
 .footer { margin-top:36px;padding-top:18px;border-top:1px dotted #ccc; }
 .box{
 	background-color: #fbfbfb;
@@ -9,10 +9,16 @@ body{ padding-top:90px;}
 	        border-radius: 3px;
 }
 .well{-webkit-box-shadow: none;-moz-box-shadow: none;box-shadow: none;}
+.time{color:#666;}
 
 #main .items .item { padding:18px;border-bottom:1px solid #ccc;margin-bottom:-1px; }
+#main .items .pager{ padding:18px;margin-bottom:0; }
 
 #page-home .box{border: none;background: none;}
 #page-home #functions .span4{ padding:18px 0; }
 #page-home #functions .span4 h3 {margin-bottom:18px;}
-#page-home #functions .span4 p {padding: 3em 1em;font-size:13px;color:#666;}
+#page-home #functions .span4 p {padding: 54px 18px;font-size:13px;color:#666;}
+
+#page-blog #main .title{ padding:18px;padding-bottom:0; }
+#page-blog #main .time{ padding:18px;font-size:12px;color:#999;padding-bottom:0; }
+#page-blog #main .content{ padding:18px;font-size:16px;line-height:24px;width:640px; }
