--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,6 @@
 @import url("./bootstrap.css");
-body{ font-size:18px;font-family:"Consolas","Microsoft YaHei";padding-top:90px }
+body{ overflow-y:scroll;font-size:18px;font-family:"Consolas","Microsoft YaHei";padding-top:90px }
+abbr{ text-decoration:underline; }
 .footer { margin-top:36px;padding-top:18px;border-top:1px dotted #ccc; }
 .box{
 	background-color: #fbfbfb;
@@ -21,4 +22,5 @@ body{ font-size:18px;font-family:"Consolas","Microsoft YaHei";padding-top:90px }
 
 #page-blog #main .title{ padding:18px;padding-bottom:0; }
 #page-blog #main .time{ padding:18px;font-size:12px;color:#999;padding-bottom:0; }
-#page-blog #main .content{ padding:18px;font-size:16px;line-height:24px;width:640px; }
+#page-blog #main .content{ padding:18px;line-height:24px;width:640px; }
+#page-blog #main .comment{ padding:18px 18px 36px 18px;font-size:13px;color:#666; }
