--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,5 @@
 @import url("./bootstrap.css");
-body{ overflow-y:scroll;font-size:18px;font-family:"Consolas","Microsoft YaHei";padding-top:90px }
+body{ overflow-y:scroll;font-family:"Consolas","Microsoft YaHei";padding-top:90px }
 abbr{ text-decoration:underline; }
 .footer { margin-top:36px;padding-top:18px;border-top:1px dotted #ccc; }
 .box{
@@ -9,8 +9,11 @@ abbr{ text-decoration:underline; }
 	   -moz-border-radius: 3px;
 	        border-radius: 3px;
 }
-.well{-webkit-box-shadow: none;-moz-box-shadow: none;box-shadow: none;}
+span.alert{padding:4px 8px;}
+.well{-webkit-box-shadow:none;-moz-box-shadow: none;box-shadow: none;}
 .time{color:#666;}
+input.input-huge{width:500px;padding:16px;font-size:16px;font-weight:bold;padding-left:16px;}
+input.btn-huge{width:120px;padding:16px;font-size:16px;font-weight:bold;}
 
 #main .items .item { padding:18px;border-bottom:1px solid #ccc;margin-bottom:-1px; }
 #main .items .pager{ padding:18px;margin-bottom:0; }
@@ -20,7 +23,26 @@ abbr{ text-decoration:underline; }
 #page-home #functions .span4 h3 {margin-bottom:18px;}
 #page-home #functions .span4 p {padding: 54px 18px;font-size:13px;color:#666;}
 
-#page-blog #main .title{ padding:18px;padding-bottom:0; }
-#page-blog #main .time{ padding:18px;font-size:12px;color:#999;padding-bottom:0; }
-#page-blog #main .content{ padding:18px;line-height:24px;width:640px; }
-#page-blog #main .comment{ padding:18px 18px 36px 18px;font-size:13px;color:#666; }
+#main .title{ padding:18px;padding-bottom:0; }
+#main .time{ padding:18px;font-size:12px;color:#999;padding-bottom:0; }
+#main .content{ padding:18px;line-height:24px;width:640px; }
+#main .comment{ padding:18px 18px 36px 18px;font-size:13px;color:#666; }
+
+/* @PageDown {{{ */
+.wmd-panel{}
+.wmd-button-bar {width: 100%;background-color: Silver; }
+.wmd-input {background-color: #eee;}
+.wmd-preview { display:none;background-color: #c0e0ff;padding:18px;border:1px solid #000;width:640px;line-height:24px; }
+.wmd-button-row{position: relative;margin-left: 5px;margin-right: 5px;margin-bottom: 5px;margin-top: 10px;padding: 0px;  height: 20px;}
+.wmd-spacer{width: 1px; height: 20px; margin-left: 14px;position: absolute;background-color: Silver;display: inline-block; list-style: non;}
+.wmd-button {width: 20px;height: 20px;padding-left: 2px;padding-right: 3px;position: absolute;display: inline-block;list-style: none;cursor: pointer;}
+.wmd-button > span {background-image: url(../img/wmd-buttons.png);background-repeat: no-repeat;background-position: 0px 0px;width: 20px;height: 20px;display: inline-block;}
+.wmd-spacer1{left: 50px;}
+.wmd-spacer2{left: 175px;}
+.wmd-spacer3{left: 300px;}
+.wmd-prompt-background{background-color: Black;}
+.wmd-prompt-dialog{border: 1px solid #999999;background-color: #F5F5F5;}
+.wmd-prompt-dialog > form > input[type="text"] {border: 1px solid #999999;color: black;}
+.wmd-prompt-dialog > form > input[type="button"]{border: 1px solid #888888;font-weight: bold;}
+
+/* }}} */
