--- a/css/global.css
+++ b/css/global.css
@@ -29,7 +29,7 @@ span.alert{padding:4px 8px;}
 	#main .pager{ padding:18px;margin-bottom:0; }
 	#main .title{ padding:18px;padding-bottom:0; }
 	#main .time{ font-size:12px;color:#999;padding-bottom:0; }
-	#main .content{ padding:18px;line-height:24px;width:640px; }
+	#main .content{ padding:18px;line-height:24px; }
 	#main .comment{ padding:18px 18px 36px 18px;font-size:13px;color:#666; }
 /*}}}*/
 /* @WMEDITOR {{{ */
