--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -12,7 +12,7 @@
       <div id='brand'>
         <div class='logo'>LOGO</div>
         <div class='search'>
-          <form action='/estate.html'>
+          <form action='/estate.html' class='clearfix'>
             <input name='q' type='text' placeholder='输入楼盘名称、地址或开发商等' />
             <input type='submit' value='搜索' />
           </form>
