--- a/static/css.css
+++ b/static/css.css
@@ -11,8 +11,10 @@ h1 {font-size:2em;font-weight:bold;}
 h2 {font-size:1.5em;font-weight:bold;}
 h3 {font-size:1.25em;font-weight:bold;}
 
-.primary {color:#63ab00;}
+.primary {color:#62ab00;}
 .secondary{color:#528e00;}
+
+.submit {cursor:pointer;}
 
 .clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden}
 .clearfix{*+height:1%;}
@@ -25,8 +27,6 @@ p{margin:0;}
 #ft a{color:#666;text-decoration:none;}
 
 .block { padding:1.25em 2.5em; }
-.block:after{content:".";display:block;height:0;clear:both;visibility:hidden}
-.block{*+height:1%;}
 .block .hd{padding-bottom:0.5em;}
 
 .block .hd h1{color:#528e00;}
@@ -34,40 +34,43 @@ p{margin:0;}
 .block .hd h3{color:#528e00;}
 
 .block-bordered{border:1px solid #eee;}
-.hd-bordered{border-bottom:1px solid #63ab00;}
+.hd-bordered{border-bottom:1px solid #62ab00;}
 
-#brand {height:8em;width:1000px;margin:0 auto;}
-#brand .logo{float:left;line-height:8em;}
-#brand .search{float:right;}
-#brand .search form {margin-top:2.5em;}
-#brand .search form input[type=text] {float:left;border:1px solid #63ab00;width:36em;height:2em;padding:0.5em;}
-#brand .search form input[type=submit] {float:left;border:1px solid #528e00;color:#fff;background-color:#528e00;height:2.1em;font-size:1.5em;padding:0 2em;}
+#brand {width:1000px;margin:0 auto;}
+#brand .logo   {float:left; margin-top:2.5em;width:400px;}
+#brand .search {margin-left:440px;_margin-left:438px;}
+#brand .search .form{overflow:hidden;}
+#brand .search form {margin-top:2.5em; }
+#brand .search form input.submit {float:left;border:1px solid #528e00;color:#fff;background:#528e00 url('./images/search.png') right bottom no-repeat;;height:2.1em;line-height:2.1em;font-size:1.5em;padding:0 2em;_padding: 0 1em;font-weight:bold;}
+#brand .search form input.text {float:left;border:1px solid #62ab00;width:36em;height:2em;line-height:2em;padding:0.5em;}
 #brand .search .quick-search{line-height:2em;}
-#brand .search .quick-search ul li{ float:left;margin-right:0.5em; }
+#brand .search .quick-search ul li{ float:left; margin-right:0.5em; }
 
 
-#nav { height:4em;line-height:3.75em;background-color:#63ab00;}
+#nav { height:50px;line-height:50px;background-color:#62ab00;}
 #nav .wrap {width:1000px;margin:0 auto;}
 
 #nav ul {display:block;}
 #nav ul.menu li{float:left;padding:0 2.5em;}
 #nav ul.menu li.active { background-color:#528e00; }
 #nav ul.menu li.hover { background-color:#528e00; }
-#nav ul.menu li a{color:#fff;font-size:1.5em;}
+#nav ul.menu li a{color:#fff;font-size:1.5em;line-height:100%;}
 
-#nav ul.user {display:block;float:right;}
+#nav ul.user {display:block;float:right;height:50px;overflow:hidden;background: url("./images/login.png") left bottom no-repeat;padding-left:58px;}
 #nav ul.user li{float:right;margin-right:1em;}
 #nav ul.user li a{color:#fff;font-size:1.25em;font-weight:bold;}
 
-#links .hd { border-bottom:1px solid #63ab00; }
+#links .hd { border-bottom:1px solid #62ab00; }
 #links .bd {padding: 0 1em;}
 #links .bd ul{margin-top:1em;}
 #links .bd ul li{line-height:2em;float:left;width:12.5%;}
 
 /*Pages*/
 .page-index {margin:1em 0;}
-.page-index .categories { float:left; width:270px;height:360px; }
+.page-index .categories { float:left; width:220px;height:328px; overflow:hidden; }
 .page-index .categories .hd h1{font-weight:normal;}
 .page-index .categories .bd{ margin:1em 0;}
 .page-index .categories .category {padding-bottom:0.5em;margin-bottom:0.5em;border-bottom:1px solid #eee;}
 .page-index .categories .category dt {color:#528e00;font-weight:bold;}
+
+.page-index .pic-headlines { margin-left:300px; _margin-left:294px;}
