--- a/static/templates/admin/index.html
+++ b/static/templates/admin/index.html
@@ -168,7 +168,7 @@
 				<li>
 					<a href="javascript:;">
 					<i class="icon-basket"></i>
-					<span class="title">基础资料</span>
+					<span class="title">系统配置</span>
 					<span class="arrow "></span>
 					</a>
 					<ul class="sub-menu">
