--- a/static/templates/admin/ecommerce_products.html
+++ b/static/templates/admin/ecommerce_products.html
@@ -63,7 +63,7 @@
 											<i class="fa fa-angle-right"></i>
 										</li>
 										<li>
-											<a href="#">基础资料</a>
+											<a href="#">系统配置</a>
 											<i class="fa fa-angle-right"></i>
 										</li>
 										<li>
