--- a/templates/manage-area-index.tmpl
+++ b/templates/manage-area-index.tmpl
@@ -12,15 +12,15 @@
 						<ul class="page-breadcrumb">
 							<li>
 								<i class="fa fa-home"></i>
-								<a href="/manage/index.html">后台管理</a>
+								<a href="/manage/index.html">管理首页</a>
 								<i class="fa fa-angle-right"></i>
 							</li>
 							<li>
-								<a href="/manage/basic.html">基础资料</a>
+								<a href="/manage/basic.html">系统配置</a>
 								<i class="fa fa-angle-right"></i>
 							</li>
 							<li>
-								<a href="/manage/area/index.html">区域管理</a>
+								<a href="/manage/category/index.html">资讯分类</a>
 							</li>
 						</ul>
 					</div>
@@ -148,7 +148,7 @@ var PageLogical = function () {
                 },
                 "ordering": false,
                 "columns": [
-                	{ "name": "","data": "Id","class":"table-checkbox","title":'<input type="checkbox" class="group-checkable">', "targets": 1, "width": 24, "render": function(data){
+                	{ "name": "","data": "Id","class":"table-checkbox","title":'<input type="checkbox" class="group-checkable" />', "targets": 1, "width": 24, "render": function(data){
                 		return "<input type='checkbox' value='"+ data +"' />"
                 	}},
                 	{ "data": "City", "title":"城市", "targets": 1 , "width":48},
@@ -217,6 +217,13 @@ var PageLogical = function () {
         	
         	$(this).parents("table").first().find(".selected").removeClass("selected");
         	$(this).parents("tr").first().addClass("selected");
+        	
+			$("#modal-form form").first().each(function(){
+        		
+        		this.reset();
+        		$(this).validate().resetForm();
+        	})
+        	
         	$("#modal-form").deserializeJSON(grid.getDataTable().row(".selected").data());
         });
         
