--- a/templates/manage-layout.tmpl
+++ b/templates/manage-layout.tmpl
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<!--[if IE 8]> <html class="ie8 no-js"> <![endif]-->
-<!--[if IE 9]> <html class="ie9 no-js"> <![endif]-->
+<!--[if IE 8]> <html class="ie8"> <![endif]-->
+<!--[if IE 9]> <html class="ie9"> <![endif]-->
 <!--[if !IE]><!-->
-<html class="no-js">
+<html>
 <!--<![endif]-->
-<!-- BEGIN HEAD -->
 <head>
-<meta charset="utf-8"/>
-<title>嘉兴房产团购 | 管理后台</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<title>嘉兴房产团购 | 系统管理</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <!-- BEGIN GLOBAL MANDATORY STYLES -->
@@ -19,8 +18,7 @@
 <!-- END GLOBAL MANDATORY STYLES -->
 <!-- BEGIN PAGE LEVEL PLUGIN STYLES -->
 <link href="/assets/global/plugins/gritter/css/jquery.gritter.css" rel="stylesheet" type="text/css"/>
-<link href="/assets/global/plugins/bootstrap-daterangepicker/daterangepicker-bs3.css" rel="stylesheet" type="text/css"/>
-<link href="/assets/global/plugins/fullcalendar/fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css"/>
+<link href="/assets/global/plugins/bootstrap-datetimepicker/css/datetimepicker.css" rel="stylesheet" type="text/css"/>
 <!-- END PAGE LEVEL PLUGIN STYLES -->
 <!-- BEGIN PAGE STYLES -->
 <link rel="stylesheet" type="text/css" href="/assets/global/plugins/select2/select2.css"/>
@@ -35,14 +33,8 @@
 <link href="/assets/admin/layout/css/custom.css" rel="stylesheet" type="text/css"/>
 <!-- END THEME STYLES -->
 <link rel="shortcut icon" href="favicon.ico"/>
-<style>
-	/*.page-content-wrapper .page-content {padding:0;}*/
-	.page-content-wrapper .page-content iframe { border:none;}
-	.row {margin:0;}
-</style>
+
 </head>
-<!-- END HEAD -->
-<!-- BEGIN BODY -->
 <body class="page-header-fixed page-quick-sidebar-over-content">
 <!-- BEGIN HEADER -->
 <div class="page-header navbar navbar-fixed-top">
@@ -113,7 +105,7 @@
 				</li>
 				<li class="start">
 					<a href="javascript:;">
-					<i class="icon-home"></i>
+					<i class="icon-book-open"></i>
 					<span class="title">资讯管理</span>
 					<span class="selected"></span>
 					<span class="arrow"></span>
@@ -128,36 +120,52 @@
 				</li>
 				<li>
 					<a href="javascript:;">
-					<i class="icon-basket"></i>
+					<i class="icon-puzzle"></i>
 					<span class="title">新房管理</span>
 					<span class="arrow "></span>
 					</a>
 					<ul class="sub-menu">
-						<li><a href="ecommerce_index.html"><i class="icon-bulb"></i> 新房楼盘</a></li>
+						<li><a href="/manage/real-estate/index.html"><i class="icon-bulb"></i> 新房楼盘</a></li>
 						<li><a href="ecommerce_orders.html"><i class="icon-bar-chart"></i> 商业楼盘</a></li>
 						<li><a href="ecommerce_orders_view.html"><i class="icon-bulb"></i> 房产点评</a></li>
 						<li><a href="ecommerce_products.html"><i class="icon-bar-chart"></i> 物业公司</a></li>
-						<li><a href="ecommerce_products_edit.html"><i class="icon-bulb"></i> 房产公司</a></li>
+						<li><a href="/manage/real-estate-company/index.html"><i class="icon-bulb"></i> 房产公司</a></li>
 					</ul>
 				</li>
 				<li>
 					<a href="javascript:;">
-					<i class="icon-basket"></i>
-					<span class="title">基础资料</span>
+					<i class="icon-fire"></i>
+					<span class="title">广告管理</span>
+					<span class="arrow "></span>
+					</a>
+					<ul class="sub-menu">
+						<li><a href="#"><i class="icon-bulb"></i> 广告管理</a></li>
+						<li><a href="#"><i class="icon-bar-chart"></i> 广告位管理</a></li>
+					</ul>
+				</li>
+				<li>
+					<a href="javascript:;">
+					<i class="icon-users"></i>
+					<span class="title">会员管理</span>
+					<span class="arrow "></span>
+					</a>
+					<ul class="sub-menu">
+						<li><a href="#"><i class="icon-bulb"></i> 会员管理</a></li>
+					</ul>
+				</li>
+				<li>
+					<a href="javascript:;">
+					<i class="icon-settings"></i>
+					<span class="title">系统配置</span>
 					<span class="arrow "></span>
 					</a>
 					<ul class="sub-menu">
 						<li><a href="/manage/area/index.html"><i class="icon-bulb"></i> 区域管理</a></li>
-						<li><a href="/manage/real-estate-company/index.html"><i class="icon-bulb"></i> 房产公司</a></li>
 						<li><a href="ecommerce_index.html"><i class="icon-bar-chart"></i> 学校管理</a></li>
+						<li><a href="/manage/category/index.html"><i class="icon-bulb"></i> 资讯分类</a></li>
 						<li><a href="/manage/link/index.html"><i class="icon-bulb"></i> 友情链接</a></li>
+						<li><a href="/manage/manager/index.html"><i class="icon-bulb"></i> 管理帐号</a></li>
 					</ul>
-				</li>
-				<li class="last ">
-					<a href="charts.html">
-					<i class="icon-bar-chart"></i>
-					<span class="title">Visual Charts</span>
-					</a>
 				</li>
 			</ul>
 			<!-- END SIDEBAR MENU -->
@@ -190,6 +198,7 @@
 <script src="/assets/global/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
 <script src="/assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
 <script src="/assets/global/plugins/jquery.serializejson.min.js" type="text/javascript"></script>
+<script src="/assets/global/plugins/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
 <!-- END CORE PLUGINS -->
 
 <!-- BEGIN PAGE LEVEL PLUGINS -->
@@ -206,8 +215,8 @@
 <!-- BEGIN PAGE LEVEL SCRIPTS -->
 <script src="/assets/global/scripts/metronic.js" type="text/javascript"></script>
 <script src="/assets/admin/layout/scripts/layout.js" type="text/javascript"></script>
-<script src="/assets/admin/layout/scripts/demo.js" type="text/javascript"></script>
 <script src="/assets/global/scripts/datatable.js"></script>
+<script src="/assets/admin/layout/scripts/demo.js" type="text/javascript"></script>
 <script src="/assets/global/scripts/custom.js"></script>
 <!-- END PAGE LEVEL SCRIPTS -->
 <script>
@@ -229,5 +238,4 @@ jQuery(document).ready(function() {
 </script>
 <!-- END JAVASCRIPTS -->
 </body>
-<!-- END BODY -->
 </html>
