--- a/templates/manage-real-estate-index.tmpl
+++ b/templates/manage-real-estate-index.tmpl
@@ -6,8 +6,8 @@
 				
 				<div class="caption">
 					<div class='pull-right'>
-						<a data-toggle='modal' href='#modal-form' id='button-add' class='btn btn-small blue'>
-							<i class='fa fa-plus-square'></i> 新建房产公司
+						<a href='/manage/real-estate/form.html' class='btn btn-small blue'>
+							<i class='fa fa-plus-square'></i> 新建楼盘
 						</a>
 					</div>
 					<div class="page-bar">
@@ -18,11 +18,11 @@
 								<i class="fa fa-angle-right"></i>
 							</li>
 							<li>
-								<a href="/manage/basic.html">系统配置</a>
+								<a href="/manage/real-estate.html">新房管理</a>
 								<i class="fa fa-angle-right"></i>
 							</li>
 							<li>
-								<a href="/manage/real-estate-company/index.html">房产公司</a>
+								<a href="/manage/real-estate/index.html">新房楼盘</a>
 							</li>
 						</ul>
 					</div>
@@ -34,7 +34,7 @@
 					<div class='form-group'>
 					
 						<div class="col-sm-4">
-							<input id='search-title' type='text' class='form-control' placeholder='房产公司名称关键字'/>
+							<input id='search-name' type='text' class='form-control' placeholder='楼盘名称关键字'/>
 						</div>
 						
 						<div class='col-sm-1 '>
@@ -79,138 +79,6 @@
 	</div>
 </div>
 
-<div id="modal-form" class="modal fade" tabindex="-1" aria-hidden="true">
-
-	<div class="modal-dialog" style='width:1000px;'>
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-				<h4 class="modal-title">房产公司</h4>
-			</div>
-			<div class="modal-body">
-				<div class="scroller" style="height:450px" data-always-visible="1" data-rail-visible1="1">
-					<div class="row">
-					<div class="col-12">
-					<form class="form-horizontal form-bordered">
-					
-						<input name="Id" type="text" value="" hidden />
-						<input name="MTime[Created]:number" type="text" value="" hidden />
-						
-						<div class="form-group">
-							<label class="col-sm-1 control-label">公司全称<span class="required">*</span></label>
-							<div class="col-sm-3 col-sm-offset-1">
-								<input 
-									name="Title:string" 
-									type="text" 
-									class="form-control required" 
-									data-msg-required=""
-									value=""
-								/>
-							</div>
-							
-							<label class="col-sm-1 control-label col-md-offset-1">公司简称<span class="required">*</span></label>
-							<div class="col-sm-3 col-sm-offset-1">
-								<input 
-									name="Name:string" 
-									type="text" 
-									class="form-control required" 
-									data-msg-required=""
-									value=""
-								/>
-							</div>
-						</div>
-						
-						<div class="form-group">
-						
-							<label class="col-sm-1 control-label">法人代表</label>
-							<div class="col-sm-3 col-sm-offset-1">
-								<input 
-									name="Legal:string" 
-									type="text" 
-									class="form-control" 
-									value=""
-								/>
-							</div>
-							
-							<label class="col-sm-1 control-label col-md-offset-1">联系人</label>
-							<div class="col-sm-3 col-sm-offset-1">
-								<input 
-									name="Linkman:string" 
-									type="text" 
-									class="form-control" 
-									data-msg-required=""
-									value=""
-								/>
-							</div>
-						</div>
-						
-						<div class="form-group">
-						
-							<label class="col-sm-1 control-label">联系电话</label>
-							<div class="col-sm-3 col-sm-offset-1">
-								<input 
-									name="Phone:string" 
-									type="text" 
-									class="form-control" 
-									value=""
-								/>
-							</div>
-							
-							<label class="col-sm-1 control-label col-md-offset-1">传真</label>
-							<div class="col-sm-3 col-sm-offset-1">
-								<input 
-									name="Fax:string" 
-									type="text" 
-									class="form-control" 
-									data-msg-required=""
-									value=""
-								/>
-							</div>
-						</div>
-						
-						<div class="form-group">
-						
-							<label class="col-sm-1 control-label">公司地址</label>
-							<div class="col-sm-3 col-sm-offset-1">
-								<input 
-									name="Address:string" 
-									type="text" 
-									class="form-control" 
-									value=""
-								/>
-							</div>
-							
-							<label class="col-sm-1 control-label col-md-offset-1">公司主页<span class="required">*</span></label>
-							<div class="col-sm-3 col-sm-offset-1">
-								<input 
-									name="Homepage:string" 
-									type="text" 
-									class="form-control url" 
-									data-url-required="请填入正确的URL"
-									value=""
-								/>
-							</div>
-						</div>
-						
-						<div class="form-group">
-							<label class="col-sm-1 control-label">公司介绍</label>
-							<div class="col-sm-9 col-sm-offset-1">
-								<textarea class='form-control' name="Description:string" style='height:200px;'></textarea>
-							</div>
-						</div>
-					</form>
-					</div>
-					</div>
-				</div>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn green" id="button-save">保存</button>
-				<button type="button" data-dismiss="modal" class="btn default">关闭</button>
-			</div>
-		</div>
-	</div>
-</div>
-
 <!-- END PAGE CONTENT-->
 
 <!-- BEGIN CURRENT CONTEXT -->
@@ -233,21 +101,21 @@ var PageLogical = function () {
                 ],
                 "pageLength": 20,
                 "ajax": {
-                    "url": "/manage/real-estate-company/list.json",
+                    "url": "/manage/real-estate/list.json",
                 },
                 "ordering": false,
                 "columns": [
                 	{ "name": "","data": "Id","class":"table-checkbox","title":'<input type="checkbox" class="group-checkable" />', "targets": 1, "width": 24, "render": function(data){
                 		return "<input type='checkbox' value='"+ data +"' />"
                 	}},
-                	{ "data": "Title", "title":"房产公司名称", "targets": 1 , "width":200},
-                	{ "data": "", "title":"公司标志", "targets": 2,"defaultContent": "", "width":160},
-                	{ "data": "", "title":"楼盘数", "targets": 3,"defaultContent": "", "width":80},
-                	{ "data": "Weight", "title":"排序", "targets": 4,"defaultContent": "", "width":80},
-                	{ "data": "MTime.Created", "title":"创建时间", "targets": 5,"defaultContent": "", "width":90, "render": t2d},
+                	{ "data": "Area.Area", "title":"区域", "targets": 1 , "width":120},
+                	{ "data": "Name", "title":"楼盘名称", "targets": 2,"defaultContent": "", "width":160},
+                	{ "data": "", "title":"楼盘标志", "targets": 3,"defaultContent": "", "width":80},
+                	{ "data": "Stats.Groupon", "title":"团购数", "targets": 4,"defaultContent": "", "width":80},
+                	{ "data": "MTime.Created", "title":"付费状态 ", "targets": 5,"defaultContent": "", "width":90, "render": t2d},
                 	{ "data": "MTime.Changed", "title":"更新时间", "targets": 6,"defaultContent": "", "width":90, "render": t2d},
-                	{ "title":"", "defaultContent": "", "targets": 5},
-                	{ "data": "", "title":"操作", "width":90 , "targets": 7, "defaultContent": "<a data-toggle='modal' href='#modal-form' class='btn btn-xs yellow edit'>编辑</a> <button class='delete btn btn-xs red'>删除</button>"},
+                	{ "title":"通过", "defaultContent": "", "targets": 5, "width": 40},
+                	{ "data": "", "title":"操作", "width":90 , "targets": 7, "defaultContent": "<button class='edit'>编辑</button> <button class='delete'>删除</button>"},
                 ]
             }
         });
@@ -263,8 +131,8 @@ var PageLogical = function () {
         
         $("#button-search").click(function(){
         	
-        	var title = $("#search-title").val().trim();
-            grid.setAjaxParam("title", title);
+        	var title = $("#search-name").val().trim();
+            grid.setAjaxParam("name", title);
             grid.getDataTable().ajax.reload();
             grid.clearAjaxParams();
         });
@@ -279,7 +147,7 @@ var PageLogical = function () {
         	
         	$.ajax({
         		
-        		"url": "/manage/real-estate-company/upsert.json",
+        		"url": "/manage/real-estate/upsert.json",
         		"method": "POST",
         		"dataType":"JSON",
         		"contentType":"application/json",
@@ -315,14 +183,14 @@ var PageLogical = function () {
         	
         	$(this).parents("table").first().find(".selected").removeClass("selected");
         	$(this).parents("tr").first().addClass("selected");
-        	
-			$("#modal-form form").first().each(function(){
+			
+        	$("#modal-form form").first().each(function(){
         		
         		this.reset();
         		$(this).validate().resetForm();
         	})
-        	
-        	$("#modal-form").deserializeJSON(grid.getDataTable().row(".selected").data());
+        	var row = grid.getDataTable().row(".selected").data();
+        	window.location.href = "./form.html?Id=" + row.Id;
         });
         
         grid.getTableWrapper().on('click', '.delete', function(e){
