--- a/templates/manage-layout.tmpl
+++ b/templates/manage-layout.tmpl
@@ -32,7 +32,7 @@
 <link href="/assets/admin/layout/css/themes/default.css" rel="stylesheet" type="text/css" id="style_color"/>
 <link href="/assets/admin/layout/css/custom.css" rel="stylesheet" type="text/css"/>
 <!-- END THEME STYLES -->
-<link rel="shortcut icon" href="favicon.ico"/>
+<link rel="shortcut icon" href="/favicon.ico"/>
 
 </head>
 <body class="page-header-fixed page-quick-sidebar-over-content">
@@ -42,8 +42,8 @@
 	<div class="page-header-inner">
 		<!-- BEGIN LOGO -->
 		<div class="page-logo">
-			<a href="index.html">
-			<img src="/assets/admin/layout/img/logo.png" alt="logo" class="logo-default"/>
+			<a href="/manage/index.html">
+			<img src="/images/manage/logo.png" alt="logo" class="logo-default"/>
 			</a>
 			<div class="menu-toggler sidebar-toggler hide">
 				<!-- DOC: Remove the above "hide" to enable the sidebar toggler button on header -->
@@ -62,8 +62,7 @@
 				<li class="dropdown dropdown-user">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
 					<img alt="" class="img-circle hide1" src="/assets/admin/layout/img/avatar3_small.jpg"/>
-					<span class="username username-hide-on-mobile">
-					冯慧 </span>
+					<span class="username username-hide-on-mobile">冯慧 </span>
 					<i class="fa fa-angle-down"></i>
 					</a>
 					<ul class="dropdown-menu">
