--- a/templates/manage-layout.tmpl
+++ b/templates/manage-layout.tmpl
@@ -113,8 +113,7 @@
 						<li><a href="/manage/news/index.html"><i class="icon-bulb"></i> 资讯管理</a></li>
 						<li><a href="/manage/news/people.html"><i class="icon-bar-chart"></i> 房产资讯</a></li>
 						<li><a href="/manage/news/people.html"><i class="icon-bulb"></i> 本地楼市</a></li>
-						<li><a href="/manage/news/people.html"><i class="icon-bar-chart"></i> 本地楼市</a></li>
-						<li><a href="/manage/type/index.html"><i class="icon-bulb"></i> 分类管理</a></li>
+						<li><a href="/manage/news/people.html"><i class="icon-bar-chart"></i> 资讯专题</a></li>
 					</ul>
 				</li>
 				<li>
