--- a/templates/manage-news-form.tmpl
+++ b/templates/manage-news-form.tmpl
@@ -109,14 +109,29 @@
 						<div class='row'>
 							<a id='append-category' class='form-control-static pull-right' href='javascript:void(0)'>增加</a>
 							<div class='col-md-4 category-selector'>
-								{{if .Categories}}
-									<select name="Category[][Id]" class='form-control'>
-										<option value="">选择分类</option>
-										{{range .Categories}}
-											<option value="{{.Id}}">{{.Name}}</option>
+							
+								{{ if .News.Category }}
+									{{range $c := .News.Category}}
+										{{if $.Categories}}
+											<select name="Category[][Id]" class='form-control'>
+												<option value="">选择分类</option>
+												{{range $.Categories}}
+													<option {{if eqs .Name $c.Name}}selected{{end}} value="{{.Id}}">{{.Name}}</option>
+												{{end}}
+											</select>
 										{{end}}
-									</select>
+									{{end}}
+								{{else}}
+									{{if $.Categories}}
+										<select name="Category[][Id]" class='form-control'>
+											<option value="">选择分类</option>
+											{{range $.Categories}}
+												<option value="{{.Id}}">{{.Name}}</option>
+											{{end}}
+										</select>
+									{{end}}
 								{{end}}
+								
 							</div>
 						</div>
 					</td>
@@ -159,6 +174,7 @@
 					<td></td>
 					<td colspan=3>
 						<input type='submit' class='btn btn-success' value='保存' />
+						<a href='javascript:(window.history.go(-1))'>取消</a>
 					</td>
 				</tr>
 			</tbody>
